@@ -5,5 +5,5 @@
 'data_directory'      : './source',
 'input_name_format'   : '{problem}-{input}-{id}.in',
 'output_name_format'  : '{problem}-{input}-{id}.out',
-'source_names_format' : ['{problem}-{input}-{id}.cpp'],
+'source_names_format' : [],
 }
